--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "cargo-readme": "cd programs/snapshots/ && cargo readme > README.md && cd ../../ && rm README.md && cp programs/snapshots/README.md README.md"
   },
   "devDependencies": {
-    "@gokiprotocol/client": "^0.5.4",
+    "@gokiprotocol/client": "^0.5.5",
     "@project-serum/anchor": "^0.20.1",
     "@rushstack/eslint-patch": "^1.1.0",
-    "@saberhq/anchor-contrib": "^1.12.35",
-    "@saberhq/chai-solana": "^1.12.35",
-    "@saberhq/eslint-config": "^1.12.35",
-    "@saberhq/solana-contrib": "^1.12.35",
-    "@saberhq/token-utils": "^1.12.35",
-    "@saberhq/tsconfig": "^1.12.35",
+    "@saberhq/anchor-contrib": "^1.12.36",
+    "@saberhq/chai-solana": "^1.12.36",
+    "@saberhq/eslint-config": "^1.12.36",
+    "@saberhq/solana-contrib": "^1.12.36",
+    "@saberhq/token-utils": "^1.12.36",
+    "@saberhq/tsconfig": "^1.12.36",
     "@solana/web3.js": "^1.32.0",
     "@tribecahq/tribeca-sdk": "^0.3.1",
     "@types/bn.js": "^5.1.0",
@@ -51,13 +51,13 @@
     "@types/prettier": "^2.4.3",
     "@yarnpkg/doctor": "^3.1.0",
     "bn.js": "^5.2.0",
-    "chai": "^4.3.5",
+    "chai": "^4.3.6",
     "eslint": "^8.7.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
     "jsbi": "^4.1.0",
-    "lint-staged": "^12.3.1",
+    "lint-staged": "^12.3.2",
     "lodash": "^4.17.21",
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
@@ -76,7 +76,8 @@
   },
   "resolutions": {
     "bn.js": "^5.2.0",
-    "@types/bn.js": "^5.1.0"
+    "@types/bn.js": "^5.1.0",
+    "chai": "^4.3.6"
   },
   "publishConfig": {
     "access": "public"
