--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "cargo-readme": "cd programs/snapshots/ && cargo readme > README.md && cd ../../ && rm README.md && cp programs/snapshots/README.md README.md"
   },
   "devDependencies": {
-    "@gokiprotocol/client": "^0.5.5",
-    "@project-serum/anchor": "^0.21.0",
+    "@gokiprotocol/client": "^0.7.0",
+    "@project-serum/anchor": "^0.22.0",
     "@rushstack/eslint-patch": "^1.1.0",
-    "@saberhq/anchor-contrib": "^1.12.44",
-    "@saberhq/chai-solana": "^1.12.44",
-    "@saberhq/eslint-config": "^1.12.44",
-    "@saberhq/solana-contrib": "^1.12.44",
-    "@saberhq/token-utils": "^1.12.44",
-    "@saberhq/tsconfig": "^1.12.44",
-    "@solana/web3.js": "^1.34.0",
-    "@tribecahq/tribeca-sdk": "^0.3.2",
+    "@saberhq/anchor-contrib": "^1.12.45",
+    "@saberhq/chai-solana": "^1.12.45",
+    "@saberhq/eslint-config": "^1.12.45",
+    "@saberhq/solana-contrib": "^1.12.45",
+    "@saberhq/token-utils": "^1.12.45",
+    "@saberhq/tsconfig": "^1.12.45",
+    "@solana/web3.js": "^1.35.1",
+    "@tribecahq/tribeca-sdk": "^0.5.2",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.21",
     "@types/prettier": "^2.4.4",
-    "@yarnpkg/doctor": "^3.1.1-rc.2",
+    "@yarnpkg/doctor": "^3.1.1",
     "bn.js": "^5.2.0",
     "chai": "^4.3.6",
     "eslint": "^8.9.0",
@@ -59,10 +59,10 @@
     "jsbi": "^4.1.0",
     "lint-staged": "^12.3.4",
     "lodash": "^4.17.21",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.1",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
-    "typedoc": "^0.22.11",
+    "typedoc": "^0.22.12",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
@@ -77,7 +77,7 @@
   "resolutions": {
     "bn.js": "^5.2.0",
     "@types/bn.js": "^5.1.0",
-    "chai": "^4.3.6"
+    "chai": "=4.3.4"
   },
   "publishConfig": {
     "access": "public"
