--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,5 +1,8 @@
-anchor_version = "0.22.0"
-solana_version = "1.8.11"
+anchor_version = "0.22.1"
+solana_version = "1.8.16"
+
+[features]
+seeds = true
 
 [scripts]
 test = "yarn mocha"
