--- a/programs/snapshots/Cargo.toml
+++ b/programs/snapshots/Cargo.toml
@@ -25,4 +25,5 @@ anchor-lang = "^0.22"
 anchor-spl = "^0.22"
 locked-voter = { version = "^0.5", features = ["cpi"] }
 num-traits = "0.2"
+snapshots-math = { version = "^0.2", path = "./math" }
 vipers = "^2.0"
