--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install Yarn dependencies
         run: yarn install
       - name: Parse IDLs
-        run: nix shell .#ci --command yarn idl:generate
+        run: nix shell .#env-anchor-idls --command yarn idl:generate
       - run: yarn build
       - run: |
           echo 'npmAuthToken: "${NPM_AUTH_TOKEN}"' >> .yarnrc.yml
@@ -76,6 +76,10 @@ jobs:
 
   release-binaries:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-build
+
     name: Release verifiable binaries
     steps:
       - uses: actions/checkout@v3
@@ -87,7 +91,7 @@ jobs:
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       - name: Build programs
-        run: nix shell .#ci --command anchor build --verifiable
+        run: anchor build --verifiable
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
@@ -98,6 +102,10 @@ jobs:
 
   site:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-idls
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -123,7 +131,7 @@ jobs:
       - name: Install Yarn dependencies
         run: yarn install
       - name: Parse IDLs
-        run: nix shell .#ci --command yarn idl:generate
+        run: yarn idl:generate
       - run: yarn docs:generate
       - run: cp -R images/ site/
 
