--- a/.github/workflows/programs-e2e.yml
+++ b/.github/workflows/programs-e2e.yml
@@ -15,17 +15,23 @@ jobs:
   sdk:
     runs-on: ubuntu-latest
     name: Build the SDK
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-idls
+
     steps:
       - uses: actions/checkout@v3
 
+      # Install Cachix
       - uses: cachix/install-nix-action@v16
       - name: Setup Cachix
         uses: cachix/cachix-action@v10
         with:
           name: saber
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
       - name: Parse IDLs
-        run: nix shell .#ci --command ./scripts/parse-idls.sh
+        run: ./scripts/parse-idls.sh
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -53,8 +59,20 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-build
+
     steps:
       - uses: actions/checkout@v3
+
+      # Install Cachix
+      - uses: cachix/install-nix-action@v16
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v10
+        with:
+          name: saber
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       # Install Rust and Anchor
       - name: Install Rust nightly
@@ -68,14 +86,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config build-essential libudev-dev
-
-      # Install Cachix
-      - uses: cachix/install-nix-action@v16
-      - name: Setup Cachix
-        uses: cachix/cachix-action@v10
-        with:
-          name: saber
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       # Install Solana
       - name: Cache Solana binaries
