--- a/.github/workflows/programs-e2e.yml
+++ b/.github/workflows/programs-e2e.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Install Solana
         if: steps.solana-cache.outputs.cache-hit != 'true'
         run: |
-          nix shell .#ci --command solana-install init ${{ env.SOLANA_VERSION }}
+          solana-install init ${{ env.SOLANA_VERSION }}
       - name: Setup Solana Path
         run: |
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
@@ -108,7 +108,7 @@ jobs:
 
       # Run build
       - name: Build program
-        run: nix shell .#ci --command anchor build
+        run: anchor build
       - name: Download programs
         run: ./scripts/download-programs.sh
 
@@ -123,9 +123,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-modules-
 
-      - run: nix shell .#ci --command yarn install
+      - run: yarn install
       - name: Generate IDL types
-        run: nix shell .#ci --command yarn idl:generate:nolint
+        run: yarn idl:generate:nolint
       - run: yarn build
       - name: Run e2e tests
-        run: nix shell .#ci --command yarn test:e2e
+        run: yarn test:e2e
