--- a/.github/workflows/programs-e2e.yml
+++ b/.github/workflows/programs-e2e.yml
@@ -9,7 +9,6 @@ on:
 env:
   CARGO_TERM_COLOR: always
   SOLANA_VERSION: "1.8.16"
-  RUST_TOOLCHAIN: nightly-2021-12-09
 
 jobs:
   sdk:
@@ -74,18 +73,15 @@ jobs:
           name: saber
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
-      # Install Rust and Anchor
-      - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          override: true
-          profile: minimal
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-      - uses: Swatinem/rust-cache@v1
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config build-essential libudev-dev
+      - name: Install Rustup
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+      - uses: Swatinem/rust-cache@v1
 
       # Install Solana
       - name: Cache Solana binaries
