--- a/.github/workflows/programs-e2e.yml
+++ b/.github/workflows/programs-e2e.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Install Rustup
         uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           profile: minimal
       - uses: Swatinem/rust-cache@v1
 
