--- a/.github/workflows/programs-e2e.yml
+++ b/.github/workflows/programs-e2e.yml
@@ -9,23 +9,28 @@ on:
 env:
   CARGO_TERM_COLOR: always
   SOLANA_VERSION: "1.8.16"
-  RUST_TOOLCHAIN: nightly-2021-12-09
 
 jobs:
   sdk:
     runs-on: ubuntu-latest
     name: Build the SDK
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-idls --command bash {0}
+
     steps:
       - uses: actions/checkout@v3
 
+      # Install Cachix
       - uses: cachix/install-nix-action@v16
       - name: Setup Cachix
         uses: cachix/cachix-action@v10
         with:
           name: saber
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
       - name: Parse IDLs
-        run: nix shell .#ci --command ./scripts/parse-idls.sh
+        run: ./scripts/parse-idls.sh
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -53,21 +58,12 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: nix shell .#env-anchor-build --command bash {0}
+
     steps:
       - uses: actions/checkout@v3
-
-      # Install Rust and Anchor
-      - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          override: true
-          profile: minimal
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-      - uses: Swatinem/rust-cache@v1
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pkg-config build-essential libudev-dev
 
       # Install Cachix
       - uses: cachix/install-nix-action@v16
@@ -76,6 +72,17 @@ jobs:
         with:
           name: saber
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config build-essential libudev-dev
+      - name: Install Rustup
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+      - uses: Swatinem/rust-cache@v1
 
       # Install Solana
       - name: Cache Solana binaries
@@ -89,16 +96,16 @@ jobs:
       - name: Install Solana
         if: steps.solana-cache.outputs.cache-hit != 'true'
         run: |
-          nix shell .#ci --command solana-install init ${{ env.SOLANA_VERSION }}
+          solana-install init ${{ env.SOLANA_VERSION }}
       - name: Setup Solana Path
         run: |
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
           export PATH="/home/runner/.local/share/solana/install/active_release/bin:$PATH"
-          solana --version
+          cargo-build-bpf --version
 
       # Run build
       - name: Build program
-        run: nix shell .#ci --command anchor build
+        run: anchor build
       - name: Download programs
         run: ./scripts/download-programs.sh
 
@@ -113,9 +120,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-modules-
 
-      - run: nix shell .#ci --command yarn install
+      - run: yarn install
       - name: Generate IDL types
-        run: nix shell .#ci --command yarn idl:generate:nolint
+        run: yarn idl:generate:nolint
       - run: yarn build
       - name: Run e2e tests
-        run: nix shell .#ci --command yarn test:e2e
+        run: yarn test:e2e
