add proptests for sync

--- a/programs/snapshots/Cargo.toml
+++ b/programs/snapshots/Cargo.toml
@@ -28,3 +28,6 @@ num-traits = "0.2"
 snapshots-math = { version = "^0.2", path = "./math" }
 u128 = "0.1.0"
 vipers = "^2.0"
+
+[dev-dependencies]
+proptest = "1.0.0"
