Optimize sync compute units (#65)
* run cargo update

* update deps

* Massively reduce compute units by using the u128 crate

* Optimize compute units even more

* add proptests for sync

* Use 1.9.9

* remove unnecessary sync_range

--- a/programs/snapshots/Cargo.toml
+++ b/programs/snapshots/Cargo.toml
@@ -26,4 +26,8 @@ anchor-spl = "^0.22"
 locked-voter = { version = "^0.5", features = ["cpi"] }
 num-traits = "0.2"
 snapshots-math = { version = "^0.2", path = "./math" }
+u128 = "0.1.0"
 vipers = "^2.0"
+
+[dev-dependencies]
+proptest = "1.0.0"
